# BinaryFileManipulation

./: BinaryManipulation  BinaryManipulation.c  CMakeLists.txt  README.md  a.out  header.h  insere.cpp  tempCodeRunnerFile.c
code/: Compress.c  Insert.c  Remove.c  Util.c  tempCodeRunnerFile.c
